# ts-data-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  start_data_generator.cpp  start_storage.cpp
Contracts/: MarketEvent.h
DataGenerator/: DataGenerator.cpp  DataGenerator.h
StorageEngine/: StorageEngine.cpp  StorageEngine.h
